--- a/JsfClass/src/main/webapp/table/bill.xhtml
+++ b/JsfClass/src/main/webapp/table/bill.xhtml
@@ -1,81 +1,87 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	template="/common/demoTemplate.xhtml"
-	xmlns:mm="http://xmlns.jcp.org/jsf/composite/components">
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                template="/common/demoTemplate.xhtml"
+                xmlns:mm="http://xmlns.jcp.org/jsf/composite/components">
 
-	<ui:define name="metadata">
-		<ui:insert name="contentmetadata" />
-	</ui:define>
+    <ui:define name="metadata">
+        <ui:insert name="contentmetadata"/>
+    </ui:define>
 
-	<ui:define name="content">
-		<h1>Bill</h1>
+    <ui:define name="content">
+        <h1>Bill</h1>
 
-		<h:form>
-			<mm:LabeledText label="Kunde" value="#{bill.customer}" />
+        <h:form id="form">
+            <mm:LabeledText label="Kunde" value="#{bill.customer}"/>
 
-			<ui:remove>
-				<ui:repeat var="item" value="#{bill.billItems}">
-					<br />
+            <ui:remove>
+                <ui:repeat var="item" value="#{bill.billItems}">
+                    <br/>
                     #{item.product.description}
                 </ui:repeat>
-			</ui:remove>
+            </ui:remove>
 
-			<h:dataTable id="table" value="#{bill.billItems}" var="item"
-				statusVar="loop">
+            <h:dataTable id="table" value="#{bill.billItems}" var="item"
+                         statusVar="loop">
 
-				<h:column>
+                <h:column>
 
-					<f:facet name="header">Artikel</f:facet>
+                    <f:facet name="header">Artikel</f:facet>
 
-					<h:selectOneMenu id="product" title="Bitte ein Produkt wählen"
-						required="true" requiredMessage="#{msg.msgValueNeeded}"
-						value="#{item.product}" hideNoSelectionOption="true">
-						<f:selectItem itemLabel="Bitte wählen..." itemValue="#{'None'}"
-							noSelectionOption="true" />
-						<f:selectItems value="#{bill.productItems(item)}"/>
-						<f:ajax render="@this price total totalSum" />
-					</h:selectOneMenu>
-					<h:message for="product" id="msgProduct" styleClass="errorMessage" />
+                    <h:selectOneMenu id="product" title="Bitte ein Produkt wählen"
+                                     required="true" requiredMessage="#{msg.msgValueNeeded}"
+                                     value="#{item.product}" hideNoSelectionOption="true">
+                        <f:selectItem itemLabel="Bitte wählen..." itemValue="#{'None'}"
+                                      noSelectionOption="true"/>
+                        <f:selectItems value="#{bill.productItems(item)}"/>
+                        <f:ajax render="@this price total form:table:totalSum form:totalAmount"/>
+                    </h:selectOneMenu>
+                    <h:message for="product" id="msgProduct" styleClass="errorMessage"/>
 
-				</h:column>
+                </h:column>
 
-				<h:column>
-					<f:facet name="header">Anzahl</f:facet>
-					<h:inputText value="#{item.amount}" styleClass="inputSmall">
-						<f:ajax render="total totalSum" />
-					</h:inputText>
-				</h:column>
+                <h:column>
+                    <f:facet name="header">Anzahl</f:facet>
+                    <h:inputText value="#{item.amount}" styleClass="inputSmall">
+                        <f:ajax render="total form:table:totalSum form:totalAmount"/>
+                    </h:inputText>
+                </h:column>
 
-				<h:column>
-					<f:facet name="header">Preis</f:facet>
-					<h:inputText id="price" value="#{item.product.price}"
-						disabled="true" styleClass="inputSmall">
-					</h:inputText>
-				</h:column>
+                <h:column>
+                    <f:facet name="header">Preis</f:facet>
+                    <h:inputText id="price" value="#{item.product.price}"
+                                 disabled="true" styleClass="inputSmall">
+                    </h:inputText>
+                </h:column>
 
-				<h:column>
-					<f:facet name="header">Gesamtpreis</f:facet>
-					<h:inputText id="total" value="#{item.total}" disabled="true"
-						styleClass="inputSmall">
-					</h:inputText>
-					<f:facet name="footer">
-						<h:inputText id="totalsum" value="#{bill.totalSum}" disabled="true"
-									 styleClass="inputSmall">
-						</h:inputText>
-					</f:facet>
-				</h:column>
-			</h:dataTable>
+                <h:column>
+                    <f:facet name="header">Gesamtpreis</f:facet>
+                    <h:inputText id="total" value="#{item.total}" disabled="true"
+                                 styleClass="inputSmall">
+                    </h:inputText>
+                    <f:facet name="footer">
+                        <h:inputText id="totalSum" value="#{bill.totalSum}" disabled="true"
+                                     styleClass="inputSmall">
+                        </h:inputText>
+                    </f:facet>
+                </h:column>
+            </h:dataTable>
 
-			<h:commandButton action="#{bill.addItem}" value="Zeile zufügen">
-				<f:ajax render="table" />
-			</h:commandButton>
-			<br />
+            <div>
+                Artikelzahl:
+                <h:inputText id="totalAmount" value="#{bill.totalAmount}" disabled="true"
+                             styleClass="inputSmall">
+                </h:inputText>
+            </div>
+            <h:commandButton action="#{bill.addItem}" value="Zeile zufügen">
+                <f:ajax render="table"/>
+            </h:commandButton>
+            <br/>
 
-			<h:commandLink styleClass="button"
-				action="#{sessionTools.navigate('Home')}" value="Home" immediate="true"/>
-		</h:form>
-	</ui:define>
+            <h:commandLink styleClass="button"
+                           action="#{sessionTools.navigate('Home')}" value="Home" immediate="true"/>
+        </h:form>
+    </ui:define>
 </ui:composition>
