--- a/JsfClass/src/main/webapp/index.xhtml
+++ b/JsfClass/src/main/webapp/index.xhtml
@@ -41,9 +41,9 @@
             <h:commandLink styleClass="button" action="#{Page.Ajax.urlRedirect()}" value="AJAX playground"/>
 
             <br/>
-
+            <h:commandLink styleClass="button" action="#{Page.Mathe_Uebung.urlRedirect()}" value="Mathe Uebung"/>
             <br/>
-                <h:commandLink styleClass="button" action="#{Page.Schule.urlRedirect()}" value="Schule"/>
+            <h:commandLink styleClass="button" action="#{Page.Schule.urlRedirect()}" value="Schule"/>
 
             <br/>
 
